# ruuvi-dashboard

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
collector/: Dockerfile  pyproject.toml
collector/src/: api.py  config.py  dashboard.py  decoder.py  main.py  scanner.py  writer.py
collector/static/: index.html
collector/tests/: conftest.py  test_api.py  test_config.py  test_dashboard.py  test_decoder.py  test_writer.py
config/: config.yaml.example
